feat(DNS_Resolver,RequestMultiplexer): Implemented first version of the DNS_Resolver
Currently the DNS request structure support more heavy duty requests than the Resolver
currently issues (it requests one resolution at a time). In the future it could be reimplemented
to take more advantage of it's cache and pending requests. There's also the addition of the
RequestMultiplexer, an module which helps coordinate the services inside the NetworkAdapter.

There are also minor fixes (improved testcases) and GUI updates for better simulation visualization.

--- a/simulations/ScenarioTestFog/omnetpp.ini
+++ b/simulations/ScenarioTestFog/omnetpp.ini
@@ -165,25 +165,21 @@ ScenarioTestEdgeFog.**.vector-recording = true
 [Config INETComm]
 network = INETComm
 # Configurator settings
-*.configurator.dumpAddresses = true
-*.configurator.dumpTopology = true
-*.configurator.dumpLinks = true
-*.configurator.dumpRoutes = true
+#*.configurator.dumpAddresses = true
+#*.configurator.dumpTopology = true
+#*.configurator.dumpLinks = true
+#*.configurator.dumpRoutes = true
 
 # Routing settings
-*.*.ipv4.arp.typename = "GlobalArp"
+#*.*.ipv4.arp.typename = "GlobalArp"
 *.*.ipv4.routingTable.netmaskRoutes = ""
 
 # Wireless settings
 *.*.wlan[*].bitrate = 54Mbps
 
-# Visualizer settings
-*.visualizer.interfaceTableVisualizer.displayInterfaceTables = true
-*.visualizer.interfaceTableVisualizer.nodeFilter = "not (*switch* or *Switch* or *AP*)"
-
 # Using inline XML configuration
+*.configurator.dumpConfig = "ips.xml"
 *.configurator.config = xml("<config> \
-                                <interface hosts='netAdapter2' names='eth0' address='10.0.0.100'/> \
+                                <interface hosts='dc_DataCentre[0].networkAdapter' names='eth0' address='10.0.0.100'/> \
 								<interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/> \
                              </config>")
-
