test(DNS_Service,DNS_Resolver): Added extra testing and showcased tested functionality
Added the test DNS_Service_Resolution.test which tests in a simple level (to be expanded)
the cycle for a NS resolution (in this case the kind of a DataCentre NS). Showcased also
this function in action under INETcomm where the prototype FogNode resolves first the DataCenters
IP and then sends the subsequent requests.

--- a/simulations/ScenarioTestFog/omnetpp.ini
+++ b/simulations/ScenarioTestFog/omnetpp.ini
@@ -164,6 +164,7 @@ ScenarioTestEdgeFog.**.vector-recording = true
 
 [Config INETComm]
 network = INETComm
+**.netAdapter1.debug = true
 # Configurator settings
 #*.configurator.dumpAddresses = true
 #*.configurator.dumpTopology = true
@@ -180,6 +181,7 @@ network = INETComm
 # Using inline XML configuration
 *.configurator.dumpConfig = "ips.xml"
 *.configurator.config = xml("<config> \
+                                <interface hosts='*.dns_server' names='eth0' address='199.7.83.42'/> \
                                 <interface hosts='dc_DataCentre[0].networkAdapter' names='eth0' address='10.0.0.100'/> \
 								<interface hosts='**' address='10.x.x.x' netmask='255.x.x.x'/> \
                              </config>")
