feat(SM_REST_API): Defined the basic message for API calls
Included the base class declaration for API calls. The final class should include also cookies
and a mechanism for determining and auto updating the payload size. Also improved the EdgeHypervisor.
On another note included the first label system for syscalls. It should help for retracking the original
requester (pid and vmId).

--- a/src/Makefile
+++ b/src/Makefile
@@ -124,7 +124,8 @@ OBJS = \
     $O/Messages/SM_UserAPP_Finish_m.o \
     $O/Messages/SM_UserVM_m.o \
     $O/Messages/SM_UserVM_Cost_m.o \
-    $O/Messages/SM_UserVM_Finish_m.o
+    $O/Messages/SM_UserVM_Finish_m.o \
+    $O/OperatingSystem/AppIdLabel/AppIdLabel_m.o
 
 # Message files
 MSGFILES = \
@@ -140,7 +141,8 @@ MSGFILES = \
     Messages/SM_UserAPP_Finish.msg \
     Messages/SM_UserVM.msg \
     Messages/SM_UserVM_Cost.msg \
-    Messages/SM_UserVM_Finish.msg
+    Messages/SM_UserVM_Finish.msg \
+    OperatingSystem/AppIdLabel/AppIdLabel.msg
 
 # SM files
 SMFILES =
