--- a/simulations/ScenarioTestFog/omnetpp.ini
+++ b/simulations/ScenarioTestFog/omnetpp.ini
@@ -42,7 +42,7 @@ seed-0-mt = 0
 ################################################################
 
 #numApps | TypeInstanceApp NameInstanceApp NumParams {inputDataSize,outputDatSize,inputFile,outputFile,MIs,iterations}
-*.appList = "3 LocalApplication AppCPUIntensive 6 inputDataSize int MiB 10 outputDataSize int MiB 5 inputFile string - /inputFile_0.dat outputFile string - /outputFile_0.dat MIs int - 79200000 iterations int - 5 LocalApplication AppDataIntensive 6 inputDataSize int MiB 50 outputDataSize int MiB 75 inputFile string - /inputFile_0.dat outputFile string - /outputFile_0.dat MIs int - 1000 iterations int - 5 LocalApplication AppSmall 6 inputDataSize int MiB 1 outputDataSize int MiB 1 inputFile string - /inputFile_0.dat outputFile string - /outputFile_0.dat MIs int - 100 iterations int - 1 "
+*.appList = "3 LocalApplication AppCPUIntensive 6 inputDataSize int 10MiB outputDataSize int 5MiB inputFile string /inputFile_0.dat outputFile string /outputFile_0.dat MIs int 79200000 iterations int 5 LocalApplication AppDataIntensive 6 inputDataSize int 50MiB outputDataSize int 75MiB inputFile string /inputFile_0.dat outputFile string /outputFile_0.dat MIs int 1000 iterations int 5 LocalApplication AppSmall 6 inputDataSize int 1MiB outputDataSize int 1MiB inputFile string /inputFile_0.dat outputFile string /outputFile_0.dat MIs int 100 iterations int 1 "
 
 #numVMs | VMType(name) cost numCores SCU DiskGB memoryGB
 *.vmList = "10 VM_4xlarge 23.0 16 16.0 1000.0 64.0 VM_2xlarge 23.0 8 8.0 1000.0 32.0 VM_xlarge 23.0 4 4.0 1000.0 16.0 VM_large 23.0 4 4.0 1000.0 8.0 VM_medium 15.0 2 2.0 500.0 4.0 VM_small 15.0 1 1.0 250.0 2.0 VM_micro 15.0 1 1.0 100.0 1.0 VM_nanoHD 15.0 1 1.0 500.0 0.5 VM_nanoRAM 15.0 1 1.0 100.0 2.0 VM_nano 15.0 1 1.0 100.0 0.5 "
