--- a/simulations/ScenarioTestFog/omnetpp.ini
+++ b/simulations/ScenarioTestFog/omnetpp.ini
@@ -171,6 +171,13 @@ network = INETComm
 #*.configurator.dumpLinks = true
 #*.configurator.dumpRoutes = true
 
+# SimSchema settings
+*.simData.simSchema.typename = "SimSchemaMySQL"
+*.simData.simSchema.hostName = "tcp://127.0.0.1:3306"
+
+# Experiment settings
+*.simData.manager.experiment = "Test"
+
 # Routing settings
 #*.*.ipv4.arp.typename = "GlobalArp"
 *.*.ipv4.routingTable.netmaskRoutes = ""
