feat(DcResourceManager): Resource Management utilities for Data Centers
This module follows the line of reducing the responsibilities of the DcManagers,
handling all the inner logic related with resource management. The most important
feature will be the support for "transactional deployments" which will allow for a more
efficient rollback in case the deployment (SM_UserVM) is just not viable.

Other minor changes are minor fixes and also displacing the logic of the timing of
cpu usage from the DcManager to the HardwareManager.

--- a/simulations/ScenarioTestFog/omnetpp.ini
+++ b/simulations/ScenarioTestFog/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 ## TEMPORAL
- print-undisposed=true
+print-undisposed=true
 
 ## Time resolution
 simtime-resolution = ps
@@ -38,25 +38,6 @@ num-rngs = 1
 seed-0-mt = 0
 
 ################################################################
-###  Configuration of Cloud provider:CloudProviderFirstFit
-################################################################
-
-#numApps | TypeInstanceApp NameInstanceApp NumParams {inputDataSize,outputDatSize,inputFile,outputFile,MIs,iterations}
-*.appList = "3 LocalApplication AppCPUIntensive 6 inputDataSize int 10MiB outputDataSize int 5MiB inputFile string /inputFile_0.dat outputFile string /outputFile_0.dat MIs int 79200000 iterations int 5 LocalApplication AppDataIntensive 6 inputDataSize int 50MiB outputDataSize int 75MiB inputFile string /inputFile_0.dat outputFile string /outputFile_0.dat MIs int 1000 iterations int 5 LocalApplication AppSmall 6 inputDataSize int 1MiB outputDataSize int 1MiB inputFile string /inputFile_0.dat outputFile string /outputFile_0.dat MIs int 100 iterations int 1 "
-
-#numVMs | VMType(name) cost numCores SCU DiskGB memoryGB
-*.vmList = "10 VM_4xlarge 23.0 16 16.0 1000.0 64.0 VM_2xlarge 23.0 8 8.0 1000.0 32.0 VM_xlarge 23.0 4 4.0 1000.0 16.0 VM_large 23.0 4 4.0 1000.0 8.0 VM_medium 15.0 2 2.0 500.0 4.0 VM_small 15.0 1 1.0 250.0 2.0 VM_micro 15.0 1 1.0 100.0 1.0 VM_nanoHD 15.0 1 1.0 500.0 0.5 VM_nanoRAM 15.0 1 1.0 100.0 2.0 VM_nano 15.0 1 1.0 100.0 0.5 "
-
-#numSLAs | slaType NumVms vmName costBase costIncrease CostDiscount costCompensation
-*.slaList = "24 Slai0d0c0 10 VM_4xlarge 0.92 0.0 0.0 0.0 VM_2xlarge 0.46 0.0 0.0 0.0 VM_xlarge 0.23 0.0 0.0 0.0 VM_large 0.12 0.0 0.0 0.0 VM_medium 0.05 0.0 0.0 0.0 VM_small 0.03 0.0 0.0 0.0 VM_micro 0.02 0.0 0.0 0.0 VM_nanoHD 0.01 0.0 0.0 0.0 VM_nanoRAM 0.01 0.0 0.0 0.0 VM_nano 0.01 0.0 0.0 0.0 Slai05d0c0 10 VM_4xlarge 0.92 0.5 0.0 0.0 VM_2xlarge 0.46 0.5 0.0 0.0 VM_xlarge 0.23 0.5 0.0 0.0 VM_large 0.12 0.5 0.0 0.0 VM_medium 0.05 0.5 0.0 0.0 VM_small 0.03 0.5 0.0 0.0 VM_micro 0.02 0.5 0.0 0.0 VM_nanoHD 0.01 0.5 0.0 0.0 VM_nanoRAM 0.01 0.5 0.0 0.0 VM_nano 0.01 0.5 0.0 0.0 Slai0d02c0 10 VM_4xlarge 0.92 0.0 0.2 0.0 VM_2xlarge 0.46 0.0 0.2 0.0 VM_xlarge 0.23 0.0 0.2 0.0 VM_large 0.12 0.0 0.2 0.0 VM_medium 0.05 0.0 0.2 0.0 VM_small 0.03 0.0 0.2 0.0 VM_micro 0.02 0.0 0.2 0.0 VM_nanoHD 0.01 0.0 0.2 0.0 VM_nanoRAM 0.01 0.0 0.2 0.0 VM_nano 0.01 0.0 0.2 0.0 Slai0d0c01 10 VM_4xlarge 0.92 0.0 0.0 0.1 VM_2xlarge 0.46 0.0 0.0 0.1 VM_xlarge 0.23 0.0 0.0 0.1 VM_large 0.12 0.0 0.0 0.1 VM_medium 0.05 0.0 0.0 0.1 VM_small 0.03 0.0 0.0 0.1 VM_micro 0.02 0.0 0.0 0.1 VM_nanoHD 0.01 0.0 0.0 0.1 VM_nanoRAM 0.01 0.0 0.0 0.1 VM_nano 0.01 0.0 0.0 0.1 Slai05d02c0 10 VM_4xlarge 0.92 0.5 0.2 0.0 VM_2xlarge 0.46 0.5 0.2 0.0 VM_xlarge 0.23 0.5 0.2 0.0 VM_large 0.12 0.5 0.2 0.0 VM_medium 0.05 0.5 0.2 0.0 VM_small 0.03 0.5 0.2 0.0 VM_micro 0.02 0.5 0.2 0.0 VM_nanoHD 0.01 0.5 0.2 0.0 VM_nanoRAM 0.01 0.5 0.2 0.0 VM_nano 0.01 0.5 0.2 0.0 Slai05d0c01 10 VM_4xlarge 0.92 0.5 0.0 0.1 VM_2xlarge 0.46 0.5 0.0 0.1 VM_xlarge 0.23 0.5 0.0 0.1 VM_large 0.12 0.5 0.0 0.1 VM_medium 0.05 0.5 0.0 0.1 VM_small 0.03 0.5 0.0 0.1 VM_micro 0.02 0.5 0.0 0.1 VM_nanoHD 0.01 0.5 0.0 0.1 VM_nanoRAM 0.01 0.5 0.0 0.1 VM_nano 0.01 0.5 0.0 0.1 Slai05d02c01 10 VM_4xlarge 0.92 0.5 0.2 0.1 VM_2xlarge 0.46 0.5 0.2 0.1 VM_xlarge 0.23 0.5 0.2 0.1 VM_large 0.12 0.5 0.2 0.1 VM_medium 0.05 0.5 0.2 0.1 VM_small 0.03 0.5 0.2 0.1 VM_micro 0.02 0.5 0.2 0.1 VM_nanoHD 0.01 0.5 0.2 0.1 VM_nanoRAM 0.01 0.5 0.2 0.1 VM_nano 0.01 0.5 0.2 0.1 Slai0d02c01 10 VM_4xlarge 0.92 0.0 0.2 0.1 VM_2xlarge 0.46 0.0 0.2 0.1 VM_xlarge 0.23 0.0 0.2 0.1 VM_large 0.12 0.0 0.2 0.1 VM_medium 0.05 0.0 0.2 0.1 VM_small 0.03 0.0 0.2 0.1 VM_micro 0.02 0.0 0.2 0.1 VM_nanoHD 0.01 0.0 0.2 0.1 VM_nanoRAM 0.01 0.0 0.2 0.1 VM_nano 0.01 0.0 0.2 0.1 Slai05d02c015 10 VM_4xlarge 0.92 0.5 0.2 0.15 VM_2xlarge 0.46 0.5 0.2 0.15 VM_xlarge 0.23 0.5 0.2 0.15 VM_large 0.12 0.5 0.2 0.15 VM_medium 0.05 0.5 0.2 0.15 VM_small 0.03 0.5 0.2 0.15 VM_micro 0.02 0.5 0.2 0.15 VM_nanoHD 0.01 0.5 0.2 0.15 VM_nanoRAM 0.01 0.5 0.2 0.15 VM_nano 0.01 0.5 0.2 0.15 Slai05d02c018 10 VM_4xlarge 0.92 0.5 0.2 0.18 VM_2xlarge 0.46 0.5 0.2 0.18 VM_xlarge 0.23 0.5 0.2 0.18 VM_large 0.12 0.5 0.2 0.18 VM_medium 0.05 0.5 0.2 0.18 VM_small 0.03 0.5 0.2 0.18 VM_micro 0.02 0.5 0.2 0.18 VM_nanoHD 0.01 0.5 0.2 0.18 VM_nanoRAM 0.01 0.5 0.2 0.18 VM_nano 0.01 0.5 0.2 0.18 Slai05d02c02 10 VM_4xlarge 0.92 0.5 0.2 0.2 VM_2xlarge 0.46 0.5 0.2 0.2 VM_xlarge 0.23 0.5 0.2 0.2 VM_large 0.12 0.5 0.2 0.2 VM_medium 0.05 0.5 0.2 0.2 VM_small 0.03 0.5 0.2 0.2 VM_micro 0.02 0.5 0.2 0.2 VM_nanoHD 0.01 0.5 0.2 0.2 VM_nanoRAM 0.01 0.5 0.2 0.2 VM_nano 0.01 0.5 0.2 0.2 Slai05d02c022 10 VM_4xlarge 0.92 0.5 0.2 0.22 VM_2xlarge 0.46 0.5 0.2 0.22 VM_xlarge 0.23 0.5 0.2 0.22 VM_large 0.12 0.5 0.2 0.22 VM_medium 0.05 0.5 0.2 0.22 VM_small 0.03 0.5 0.2 0.22 VM_micro 0.02 0.5 0.2 0.22 VM_nanoHD 0.01 0.5 0.2 0.22 VM_nanoRAM 0.01 0.5 0.2 0.22 VM_nano 0.01 0.5 0.2 0.22 Slai05d02c025 10 VM_4xlarge 0.92 0.5 0.2 0.25 VM_2xlarge 0.46 0.5 0.2 0.25 VM_xlarge 0.23 0.5 0.2 0.25 VM_large 0.12 0.5 0.2 0.25 VM_medium 0.05 0.5 0.2 0.25 VM_small 0.03 0.5 0.2 0.25 VM_micro 0.02 0.5 0.2 0.25 VM_nanoHD 0.01 0.5 0.2 0.25 VM_nanoRAM 0.01 0.5 0.2 0.25 VM_nano 0.01 0.5 0.2 0.25 Slai05d02c028 10 VM_4xlarge 0.92 0.5 0.2 0.28 VM_2xlarge 0.46 0.5 0.2 0.28 VM_xlarge 0.23 0.5 0.2 0.28 VM_large 0.12 0.5 0.2 0.28 VM_medium 0.05 0.5 0.2 0.28 VM_small 0.03 0.5 0.2 0.28 VM_micro 0.02 0.5 0.2 0.28 VM_nanoHD 0.01 0.5 0.2 0.28 VM_nanoRAM 0.01 0.5 0.2 0.28 VM_nano 0.01 0.5 0.2 0.28 Slai05d02c03 10 VM_4xlarge 0.92 0.5 0.2 0.3 VM_2xlarge 0.46 0.5 0.2 0.3 VM_xlarge 0.23 0.5 0.2 0.3 VM_large 0.12 0.5 0.2 0.3 VM_medium 0.05 0.5 0.2 0.3 VM_small 0.03 0.5 0.2 0.3 VM_micro 0.02 0.5 0.2 0.3 VM_nanoHD 0.01 0.5 0.2 0.3 VM_nanoRAM 0.01 0.5 0.2 0.3 VM_nano 0.01 0.5 0.2 0.3 Slai05d02c04 10 VM_4xlarge 0.92 0.5 0.2 0.4 VM_2xlarge 0.46 0.5 0.2 0.4 VM_xlarge 0.23 0.5 0.2 0.4 VM_large 0.12 0.5 0.2 0.4 VM_medium 0.05 0.5 0.2 0.4 VM_small 0.03 0.5 0.2 0.4 VM_micro 0.02 0.5 0.2 0.4 VM_nanoHD 0.01 0.5 0.2 0.4 VM_nanoRAM 0.01 0.5 0.2 0.4 VM_nano 0.01 0.5 0.2 0.4 Slai05d05c01 10 VM_4xlarge 0.92 0.5 0.5 0.1 VM_2xlarge 0.46 0.5 0.5 0.1 VM_xlarge 0.23 0.5 0.5 0.1 VM_large 0.12 0.5 0.5 0.1 VM_medium 0.05 0.5 0.5 0.1 VM_small 0.03 0.5 0.5 0.1 VM_micro 0.02 0.5 0.5 0.1 VM_nanoHD 0.01 0.5 0.5 0.1 VM_nanoRAM 0.01 0.5 0.5 0.1 VM_nano 0.01 0.5 0.5 0.1 Slai02d02c01 10 VM_4xlarge 0.92 0.2 0.2 0.1 VM_2xlarge 0.46 0.2 0.2 0.1 VM_xlarge 0.23 0.2 0.2 0.1 VM_large 0.12 0.2 0.2 0.1 VM_medium 0.05 0.2 0.2 0.1 VM_small 0.03 0.2 0.2 0.1 VM_micro 0.02 0.2 0.2 0.1 VM_nanoHD 0.01 0.2 0.2 0.1 VM_nanoRAM 0.01 0.2 0.2 0.1 VM_nano 0.01 0.2 0.2 0.1 Slai05d015c01 10 VM_4xlarge 0.92 0.5 0.15 0.1 VM_2xlarge 0.46 0.5 0.15 0.1 VM_xlarge 0.23 0.5 0.15 0.1 VM_large 0.12 0.5 0.15 0.1 VM_medium 0.05 0.5 0.15 0.1 VM_small 0.03 0.5 0.15 0.1 VM_micro 0.02 0.5 0.15 0.1 VM_nanoHD 0.01 0.5 0.15 0.1 VM_nanoRAM 0.01 0.5 0.15 0.1 VM_nano 0.01 0.5 0.15 0.1 Slai05d045c01 10 VM_4xlarge 0.92 0.5 0.45 0.1 VM_2xlarge 0.46 0.5 0.45 0.1 VM_xlarge 0.23 0.5 0.45 0.1 VM_large 0.12 0.5 0.45 0.1 VM_medium 0.05 0.5 0.45 0.1 VM_small 0.03 0.5 0.45 0.1 VM_micro 0.02 0.5 0.45 0.1 VM_nanoHD 0.01 0.5 0.45 0.1 VM_nanoRAM 0.01 0.5 0.45 0.1 VM_nano 0.01 0.5 0.45 0.1 Slai05d03c01 10 VM_4xlarge 0.92 0.5 0.3 0.1 VM_2xlarge 0.46 0.5 0.3 0.1 VM_xlarge 0.23 0.5 0.3 0.1 VM_large 0.12 0.5 0.3 0.1 VM_medium 0.05 0.5 0.3 0.1 VM_small 0.03 0.5 0.3 0.1 VM_micro 0.02 0.5 0.3 0.1 VM_nanoHD 0.01 0.5 0.3 0.1 VM_nanoRAM 0.01 0.5 0.3 0.1 VM_nano 0.01 0.5 0.3 0.1 Slai015d02c01 10 VM_4xlarge 0.92 0.15 0.2 0.1 VM_2xlarge 0.46 0.15 0.2 0.1 VM_xlarge 0.23 0.15 0.2 0.1 VM_large 0.12 0.15 0.2 0.1 VM_medium 0.05 0.15 0.2 0.1 VM_small 0.03 0.15 0.2 0.1 VM_micro 0.02 0.15 0.2 0.1 VM_nanoHD 0.01 0.15 0.2 0.1 VM_nanoRAM 0.01 0.15 0.2 0.1 VM_nano 0.01 0.15 0.2 0.1 Slai045d02c01 10 VM_4xlarge 0.92 0.45 0.2 0.1 VM_2xlarge 0.46 0.45 0.2 0.1 VM_xlarge 0.23 0.45 0.2 0.1 VM_large 0.12 0.45 0.2 0.1 VM_medium 0.05 0.45 0.2 0.1 VM_small 0.03 0.45 0.2 0.1 VM_micro 0.02 0.45 0.2 0.1 VM_nanoHD 0.01 0.45 0.2 0.1 VM_nanoRAM 0.01 0.45 0.2 0.1 VM_nano 0.01 0.45 0.2 0.1 Slai03d02c01 10 VM_4xlarge 0.92 0.3 0.2 0.1 VM_2xlarge 0.46 0.3 0.2 0.1 VM_xlarge 0.23 0.3 0.2 0.1 VM_large 0.12 0.3 0.2 0.1 VM_medium 0.05 0.3 0.2 0.1 VM_small 0.03 0.3 0.2 0.1 VM_micro 0.02 0.3 0.2 0.1 VM_nanoHD 0.01 0.3 0.2 0.1 VM_nanoRAM 0.01 0.3 0.2 0.1 VM_nano 0.01 0.3 0.2 0.1 "
-
-
-#NumUserType | NameUserType PriorityType {Regular o Priority} SlaType NumUserInstances NumAppType AppName NumAppInstances NumVMsType vmName NumVMsInstances nRentTime
-# ScenarioTest.userList = "1 User_A Priority Slai0d0c0 1 1 AppDataIntensive 1 1 VM_medium 1 1" -- Seems deprecated !!
-# ScenarioTest.userList = "0"
-*.userList = "1 User_A 20 1 AppDataIntensive 1 1 VM_small 5 2"
-
-################################################################
 ###  Configuration of User Generator:
 ################################################################
 ScenarioTest.userGenerator.intervalBetweenUsers = true
@@ -80,72 +61,48 @@ ScenarioTest.userGenerator.shuffleUsers = false
 ###-----------------------------------------------------------------
 ###-.-  Configuration of the computing racks type A
 ###-----------------------------------------------------------------
-*.dc_DataCentre[*].numCmpRacksA = 2
-*.dc_DataCentre[*].rackCmp_Rack_A[*].channelType = "DataCentreEth1G_channel"
-*.dc_DataCentre[*].rackCmp_Rack_A[*].numBoards = 2
-*.dc_DataCentre[*].rackCmp_Rack_A[*].bladesPerBoard = 2
-*.dc_DataCentre[*].rackCmp_Rack_A[*].board[*].blade[*].staticAppAssignment = false
-*.dc_DataCentre[*].rackCmp_Rack_A[*].board[*].blade[*].isVirtualHardware = true
-*.dc_DataCentre[*].rackCmp_Rack_A[*].board[*].blade[*].maxUsers = 24
-*.dc_DataCentre[*].rackCmp_Rack_A[*].board[*].blade[*].maxVMs = 24
-*.dc_DataCentre[*].rackCmp_Rack_A[*].board[*].blade[*].numCpuCores = 24
-*.dc_DataCentre[*].rackCmp_Rack_A[*].board[*].blade[*].memorySize = 256GB
-*.dc_DataCentre[*].rackCmp_Rack_A[*].board[*].blade[*].diskSize = 500GB
-*.dc_DataCentre[*].rackCmp_Rack_A[*].board[*].blade[*].diskReadBandwidth = 500Mbps
-*.dc_DataCentre[*].rackCmp_Rack_A[*].board[*].blade[*].diskWriteBandwidth = 500Mbps
+*.dc_DataCentre[*].blade[*].staticAppAssignment = false
+*.dc_DataCentre[*].blade[*].isVirtualHardware = true
+*.dc_DataCentre[*].blade[*].maxUsers = 24
+*.dc_DataCentre[*].blade[*].maxVMs = 24
+*.dc_DataCentre[*].blade[*].numCpuCores = 24
+*.dc_DataCentre[*].blade[*].memorySize = 256GB
+*.dc_DataCentre[*].blade[*].diskSize = 500GB
+*.dc_DataCentre[*].blade[*].diskReadBandwidth = 500Mbps
+*.dc_DataCentre[*].blade[*].diskWriteBandwidth = 500Mbps
 
 # Hypervisor
-*.dc_DataCentre[*].rackCmp_Rack_A[*].board[*].blade[*].osModule.hypervisor.active = true
+*.dc_DataCentre[*].blade[*].osModule.hypervisor.active = true
 
 # CPU
-*.dc_DataCentre[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[*].speed = 60000
-*.dc_DataCentre[*].rackCmp_Rack_A[*].board[*].blade[*].cpu.cpuCore[*].tick = 60s
+*.dc_DataCentre[*].blade[*].cpu.cpuCore[*].speed = 60000
+*.dc_DataCentre[*].blade[*].cpu.cpuCore[*].tick = 60s
 
 # Apps
-*.dc_DataCentre[*].rackCmp_Rack_A[*].board[*].blade[*].appsVectors[*].appModule[*].userAppName = "DummyApplication"
+*.dc_DataCentre[*].blade[*].osModule.appsVectors[*].appModule[*].userAppName = "DummyApplication"
 
 ###-----------------------------------------------------------------
 ###-.-  Configuration of the computing racks type B
 ###-----------------------------------------------------------------
-*.dc_DataCentre[*].numCmpRacksB = 2
-*.dc_DataCentre[*].rackCmp_Rack_B[*].channelType = "DataCentreEth1G_channel"
-*.dc_DataCentre[*].rackCmp_Rack_B[*].numBoards = 2
-*.dc_DataCentre[*].rackCmp_Rack_B[*].bladesPerBoard = 2
-*.dc_DataCentre[*].rackCmp_Rack_B[*].board[*].blade[*].staticAppAssignment = false
-*.dc_DataCentre[*].rackCmp_Rack_B[*].board[*].blade[*].isVirtualHardware = true
-*.dc_DataCentre[*].rackCmp_Rack_B[*].board[*].blade[*].maxUsers = 24
-*.dc_DataCentre[*].rackCmp_Rack_B[*].board[*].blade[*].maxVMs = 24
-*.dc_DataCentre[*].rackCmp_Rack_B[*].board[*].blade[*].numCpuCores = 24
-*.dc_DataCentre[*].rackCmp_Rack_B[*].board[*].blade[*].memorySize = 512GB
-*.dc_DataCentre[*].rackCmp_Rack_B[*].board[*].blade[*].diskSize = 500GB
-*.dc_DataCentre[*].rackCmp_Rack_B[*].board[*].blade[*].diskReadBandwidth = 500Mbps
-*.dc_DataCentre[*].rackCmp_Rack_B[*].board[*].blade[*].diskWriteBandwidth = 500Mbps
+*.dc_DataCentre[*].blade[*].staticAppAssignment = false
+*.dc_DataCentre[*].blade[*].isVirtualHardware = true
+*.dc_DataCentre[*].blade[*].maxUsers = 24
+*.dc_DataCentre[*].blade[*].maxVMs = 24
+*.dc_DataCentre[*].blade[*].numCpuCores = 24
+*.dc_DataCentre[*].blade[*].memorySize = 512GB
+*.dc_DataCentre[*].blade[*].diskSize = 500GB
+*.dc_DataCentre[*].blade[*].diskReadBandwidth = 500Mbps
+*.dc_DataCentre[*].blade[*].diskWriteBandwidth = 500Mbps
 
 # Hypervisor
-*.dc_DataCentre[*].rackCmp_Rack_B[*].board[*].blade[*].osModule.hypervisor.active = true
+*.dc_DataCentre[*].blade[*].osModule.hypervisor.active = true
 
 # CPU
-*.dc_DataCentre[*].rackCmp_Rack_B[*].board[*].blade[*].cpu.cpuCore[*].speed = 60000
-*.dc_DataCentre[*].rackCmp_Rack_B[*].board[*].blade[*].cpu.cpuCore[*].tick = 60s
+*.dc_DataCentre[*].blade[*].cpu.cpuCore[*].speed = 60000
+*.dc_DataCentre[*].blade[*].cpu.cpuCore[*].tick = 60s
 
 # Apps
-*.dc_DataCentre[*].rackCmp_Rack_B[*].board[*].blade[*].appsVectors[*].appModule[*].userAppName = "DummyApplication"
-
-## ---------------------------------------------------------------v
-##   Configuration of storage racks
-## ---------------------------------------------------------------
-
-*.dc_DataCentre[*].rackSto_Rack_B[*].channelType = "DataCentreEth1G_channel"
-*.dc_DataCentre[*].rackSto_Rack_B[*].numBoards = 1
-*.dc_DataCentre[*].rackSto_Rack_B[*].bladesPerBoard = 4
-*.dc_DataCentre[*].rackSto_Rack_B[*].board[*].blade[*].staticAppAssignment = false
-*.dc_DataCentre[*].rackSto_Rack_B[*].board[*].blade[*].isVirtualHardware = true
-*.dc_DataCentre[*].rackSto_Rack_B[*].board[*].blade[*].maxUsers = 2
-*.dc_DataCentre[*].rackSto_Rack_B[*].board[*].blade[*].maxVMs = 2
-*.dc_DataCentre[*].rackSto_Rack_B[*].board[*].blade[*].numCpuCores = 2
-*.dc_DataCentre[*].rackSto_Rack_B[*].board[*].blade[*].cpu.cpuCore[*].speed = 52500
-*.dc_DataCentre[*].rackSto_Rack_B[*].board[*].blade[*].cpu.cpuCore[*].tick = 1s
-*.dc_DataCentre[*].rackSto_Rack_B[*].board[*].blade[*].appsVectors[*].appModule[*].userAppName = "DummyApplication"
+*.dc_DataCentre[*].blade[*].osModule.appsVectors[*].appModule[*].userAppName = "DummyApplication"
 
 [Config TestEdgeFog]
 network = ScenarioTestEdgeFog
